2006-03-31  MenTaLguY  <mental@rydia.net>

    * src/dyna-draw-context.h: add documentation

2006-03-29  Andrius R. <knutux@gmail.com>

	* src/enums.h, src/selection-chemistry.cpp,
	  src/selection.h, src/selection.cpp,
	  src/ui/dialog/inkscape-preferences.cpp,
	  src/ui/dialog/inkscape-preferences.h:

	  patch #1450307 - option for select all to work in layer with it's sub-layers

2006-03-29  Andrius R. <knutux@gmail.com>

	* po/lt.po: Translated and added new language - Lithuanian.

2006-03-28  Jon A. Cruz  <jon@joncruz.org>

	* src/interface.cpp, src/dialogs/swatches.cpp:

	  Fixing name of temporary non-standard tag attributes.
	
2006-03-28  MenTaLguY  <mental@rydia.net>

    * src/layer-manager.cpp, src/layer-manager.h: draft of layer manager

2006-03-28  Jon A. Cruz  <jon@joncruz.org>

	* src/interface.cpp, src/dialogs/eek-color-def.h,
	  src/dialogs/eek-preview.h, src/dialogs/eek-preview.cpp,
	  src/dialogs/swatches.h, src/dialogs/swatches.cpp:

	  Changed objects to only get liked to "linkable" colors.
	
2006-03-28  Jon A. Cruz  <jon@joncruz.org>

	* src/interface.cpp, src/dialogs/swatches.cpp:

	  Objects now change when linked colors change.
	
2006-03-28  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/eek-color-def.h, src/dialogs/eek-color-def.cpp,
	  src/dialogs/eek-preview.h, src/dialogs/eek-preview.cpp,
	  src/dialogs/swatches.h, src/dialogs/swatches.cpp:

	  Experimenting with linked colors.
	
2006-03-26  Aaron C. Spike  <aaron@ekips.org>

	* inkscape.pod, src/main.cpp:

	  Added --export-area-canvas (-C). Area specifying options
	  (--export-area, --export-area-canvas and --export-area-drawing)
	  can now be used in combination with --export-id.

2006-03-23  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/eek-color-def.cpp, src/dialogs/eek-color-def.h,
	  src/dialogs/Makefile_insert, src/dialogs/swatches.h,
	  src/dialogs/swatches.cpp:

	  Bringing in new color class.
	
2006-03-23  Michael Wybrow  <mjwybrow@users.sourceforge.net>
